fixed jump on sticky nav :beer::beer::beer::beer:

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -112,29 +112,36 @@ input:focus {
 
 }
 /* nav */
-.nav {
 
-	ul{
-		width: 100%;
-		background-color: red;
+.navHolder{
+	height: 50px;
+	width: 100%;
+	.nav {
+
 		height: 50px;
-		padding: 3px 0;
 
-		li{
-			display: inline;
+		ul{
 			width: 100%;
-			height: 100%;
-			background-color: black;
-			color: white;
-			font-size: 32px;
+			background-color: red;
+			
+			padding: 3px 0;
 
-			a {
+			li{
+				display: inline;
+				width: 100%;
+				height: 100%;
+				background-color: black;
 				color: white;
+				font-size: 32px;
+
+				a {
+					color: white;
+				}
 			}
-		}
-	} 
+		} 
 
 
+	}
 }
 /* sidebar */
 .sidebar {
